update health page forms

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -33,6 +33,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/hack-font@3/build/web/hack-subset.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
