--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,9 +25,13 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Kalm</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/hack-font@3/build/web/hack-subset.css" />
+    <link
+      rel="preload"
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <link rel="preload" rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="preload" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/hack-font@3/build/web/hack-subset.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
